# lambdaOS

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/Browser/: Browser.html  CMakeLists.txt  Main.cpp
apps/Browser/tablet/: Browser.html
apps/Browser/tv/: Browser.html
apps/Contacts/: CMakeLists.txt  Contacts.html  Main.cpp
apps/Contacts/tablet/: Contacts.html
apps/Files/: CMakeLists.txt  Files.html  Main.cpp  files.h
apps/Files/tablet/: Files.html
apps/Messages/: CMakeLists.txt  Main.cpp  Messages.html
apps/Messages/tablet/: Messages.html
apps/Messages/watch/: Messages.html
apps/Music/: CMakeLists.txt  Main.cpp  Music.html
apps/Music/tablet/: Music.html
apps/Music/tv/: Music.html
apps/Music/watch/: Music.html
apps/Phone/: CMakeLists.txt  Main.cpp  phone.html  phone.lba  preview.html
apps/Phone/tablet/: phone.html
apps/Phone/watch/: phone.html
apps/Photos/: CMakeLists.txt  Main.cpp  Photos.html
apps/Photos/tablet/: Photos.html
apps/Photos/tv/: Photos.html
apps/Settings/: CMakeLists.txt  Main.cpp  Settings.html
apps/Settings/tablet/: Settings.html
apps/Settings/tv/: Settings.html
apps/Settings/watch/: Settings.html
kernel/: CMakeLists.txt
kernel/arch/aarch64/: exception.c
kernel/boot/: boot.s  kmain.h  linker.ld
kernel/core/: config.c  config.h  device.c  device.h  devicetree.c  fs.c  fs.h  init.c  init.h  ipc.c  ipc.h  log.h  memory.c  memory.h  mmu.h  net.h  power.c  power.h  process.c  scheduler.c  scheduler.h  security.c  security.h  time.c
kernel/drivers/: console.h  driver.c  driver.h
kernel/include/: config.h  crypto.h  memory.h  process.h  security.h  syscall.h  time.h  userdata.h
kernel/net/: network.c
kernel/services/: devmgr.c  devmgr.h  security.c  userdata.c
kernel/syscalls/: exceptions_vector.s  syscall.c
tools/: macos_toolchain.cmake  mkinitrd.sh  qemu-test.sh  run_lambda.sh  utm-setup.sh
ui/: Desktop.h  LoginScreen.cpp  LoginScreen.h
ui/desktop/: Desktop.cpp
ui/graphics/: GraphicsContext.cpp  GraphicsContext.h  Image.cpp  Image.h  ImageUtils.cpp  ImageUtils.h  SVGImage.cpp  SVGImage.h  draw.cpp  lodepng.cpp  lodepng.h
ui/graphics/render/: material.cpp  material.h
ui/graphics/shaders/: README.md  Shader.cpp  Shader.h  material.frag  material.vert
ui/menubar/: AppMenu.cpp  AppMenu.h  LauncherMenu.cpp  LauncherMenu.h  MenuBar.cpp  MenuBar.h
ui/oobe/: user.cpp  user.h  welcome.cpp  welcome.h
ui/window_interface/: WindowFrame.cpp  WindowFrame.h  window_frame.h
ui/window_titlebar/: WindowTitleBar.cpp  WindowTitleBar.h
webcpp/: CMakeLists.txt
webcpp/include/: webcpp.h  webcpp_dom.h  webcpp_font.h  webcpp_gpu.h  webcpp_image.h  webcpp_js.h  webcpp_render.h  webcpp_threading.h
webcpp/src/: webcpp.cpp  webcpp_font.c  webcpp_gpu.c  webcpp_image.c  webcpp_render.c  webcpp_threading.c  webcpp_widgets.cpp
